--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ body {
   padding: 15px 20px;
   border-left: 5px solid rgb(255, 0, 4);
 }
+footer {
+  margin-bottom: 5px;
+}
 
 /* --------------------------------------------utility class */
 .highligh {
