--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@
 }
 /* --------------------------------------------section */
 .section {
-  margin: 10% 8% 10% 10%;
+  margin: 5% 8% 5% 10%;
 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  position: relative;
 }
 .half-sec {
   flex-basis: 50%;
@@ -47,9 +48,9 @@ body {
   margin: 5px;
   margin-bottom: 6px;
 }
-#section3 ::before {
+#section3 :before {
+  content: " ";
   background: url(/img/exp-bg.png) no-repeat;
-  content: "";
 
   position: absolute;
   top: 0;
@@ -62,7 +63,13 @@ body {
   box-shadow: 0px 1px 10px 2px rgb(88, 40, 65);
   margin: 0rem 2rem;
   padding: 15px 20px;
-  border-left: 5px solid rgb(255, 0, 4);
+  border-left: 7px solid;
+  border-image: linear-gradient(
+    180deg,
+    rgb(255, 166, 0),
+    rgba(255, 94, 0, 0.89)
+  );
+  border-image-slice: 1;
 }
 footer {
   margin-bottom: 5px;
@@ -96,5 +103,5 @@ footer {
 }
 .h-down {
   position: relative;
-  top: 70px;
+  top: 25px;
 }
